packages/@aws-cdk/aws-batch-alpha/test/integ.job-queue.js.snapshot/stack.template.json
{
 "Resources": {
  "vpcA2121C38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc"
     }
    ]
   }
  },
  "vpcPublicSubnet1Subnet2E65531E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1RouteTable48A2DF9B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1RouteTableAssociation5D3F4579": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    }
   }
  },
  "vpcPublicSubnet1DefaultRoute10708846": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ]
  },
  "vpcPublicSubnet1EIPDA49DCBE": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1NATGateway9C16659E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet1EIPDA49DCBE",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579"
   ]
  },
  "vpcPublicSubnet2Subnet009B674F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2RouteTableEB40D4CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2RouteTableAssociation21F81B59": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    }
   }
  },
  "vpcPublicSubnet2DefaultRouteA1EC0F60": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ]
  },
  "vpcPublicSubnet2EIP9B3743B1": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2NATGateway9B8AE11A": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet2EIP9B3743B1",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2RouteTableAssociation21F81B59"
   ]
  },
  "vpcPrivateSubnet1Subnet934893E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "stack/vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "vpcPrivateSubnet1RouteTableB41A48CC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "vpcPrivateSubnet1RouteTableAssociation67945127": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet1Subnet934893E8"
    }
   }
  },
  "vpcPrivateSubnet1DefaultRoute1AA8E2E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet1NATGateway9C16659E"
    }
   }
  },
  "vpcPrivateSubnet2Subnet7031C2BA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "stack/vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet2RouteTable7280F23E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet2RouteTableAssociation007E94D3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
    }
   }
  },
  "vpcPrivateSubnet2DefaultRouteB0E07F99": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet2NATGateway9B8AE11A"
    }
   }
  },
  "vpcIGWE57CBDCA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "stack/vpc"
     }
    ]
   }
  },
  "vpcVPCGW7984C166": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "InternetGatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   }
  },
  "fairshareA0BDD877": {
   "Type": "AWS::Batch::SchedulingPolicy",
   "Properties": {
    "FairsharePolicy": {
     "ComputeReservation": 75,
     "ShareDecaySeconds": 3600,
     "ShareDistribution": [
      {
       "ShareIdentifier": "shareA",
       "WeightFactor": 0.5
      },
      {
       "ShareIdentifier": "shareB",
       "WeightFactor": 7
      }
     ]
    },
    "Name": "joBBQFairsharePolicy"
   }
  },
  "managedEc2CESecurityGroup7EB1D710": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "stack/managedEc2CE/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "managedEc2CEInstanceProfileRole58A9B8C3": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
       ]
      ]
     }
    ]
   }
  },
  "managedEc2CEInstanceProfile720729B7": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "managedEc2CEInstanceProfileRole58A9B8C3"
     }
    ]
   }
  },
  "managedEc2CE195A935F": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "AllocationStrategy": "BEST_FIT_PROGRESSIVE",
     "InstanceRole": {
      "Fn::GetAtt": [
       "managedEc2CEInstanceProfile720729B7",
       "Arn"
      ]
     },
     "InstanceTypes": [
      "optimal"
     ],
     "MaxvCpus": 256,
     "MinvCpus": 0,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "managedEc2CESecurityGroup7EB1D710",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "EC2",
     "UpdateToLatestImageVersion": true
    },
    "ReplaceComputeEnvironment": false,
    "State": "ENABLED",
    "UpdatePolicy": {}
   }
  },
  "joBBQ74605869": {
   "Type": "AWS::Batch::JobQueue",
   "Properties": {
    "ComputeEnvironmentOrder": [
     {
      "ComputeEnvironment": {
       "Fn::GetAtt": [
        "managedEc2CE195A935F",
        "ComputeEnvironmentArn"
       ]
      },
      "Order": 1
     },
     {
      "ComputeEnvironment": {
       "Fn::GetAtt": [
        "newManagedEc2CECBFFDA3E",
        "ComputeEnvironmentArn"
       ]
      },
      "Order": 2
     }
    ],
    "Priority": 10,
    "SchedulingPolicyArn": {
     "Fn::GetAtt": [
      "fairshareA0BDD877",
      "Arn"
     ]
    },
    "State": "ENABLED"
   }
  },
  "newManagedEc2CESecurityGroup5147EFE5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "stack/newManagedEc2CE/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   }
  },
  "newManagedEc2CEInstanceProfileRoleE4DA6E77": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
       ]
      ]
     }
    ]
   }
  },
  "newManagedEc2CEInstanceProfile9101ED44": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "newManagedEc2CEInstanceProfileRoleE4DA6E77"
     }
    ]
   }
  },
  "newManagedEc2CECBFFDA3E": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "managed",
    "ComputeResources": {
     "AllocationStrategy": "BEST_FIT_PROGRESSIVE",
     "InstanceRole": {
      "Fn::GetAtt": [
       "newManagedEc2CEInstanceProfile9101ED44",
       "Arn"
      ]
     },
     "InstanceTypes": [
      "optimal"
     ],
     "MaxvCpus": 256,
     "MinvCpus": 0,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "newManagedEc2CESecurityGroup5147EFE5",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "EC2",
     "UpdateToLatestImageVersion": true
    },
    "ReplaceComputeEnvironment": false,
    "State": "ENABLED",
    "UpdatePolicy": {}
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
